--- a/RNN/final_model.ipynb
+++ b/RNN/final_model.ipynb
@@ -25,7 +25,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = pd.read_pickle('extracted_features/features_training.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = [test_data[0] for i in range(len(test_data))]\n",
+    "y = [test_data[1] for i in range(len(test_data))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = []\n",
+    "for i in range(len(test_data)):\n",
+    "    y.append(test_data[i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([[-2.9815796e+02, -2.9586832e+02, -2.9795453e+02, ...,\n",
+       "         -5.3454541e+02, -5.3454541e+02, -5.3422302e+02],\n",
+       "        [ 1.4022797e+02,  1.5817764e+02,  1.5618311e+02, ...,\n",
+       "          0.0000000e+00,  0.0000000e+00, -2.5148785e-01],\n",
+       "        [-4.4323803e+01, -5.4732460e+01, -5.8279625e+01, ...,\n",
+       "          0.0000000e+00,  0.0000000e+00, -1.7819440e-01],\n",
+       "        ...,\n",
+       "        [-7.3177934e-01, -7.3177934e-01, -7.3177934e-01, ...,\n",
+       "          1.8217701e-01,  1.8217701e-01,  1.8217701e-01],\n",
+       "        [-2.8881460e-01, -2.8881460e-01, -2.8881460e-01, ...,\n",
+       "         -3.7775323e-01, -3.7775323e-01, -3.7775323e-01],\n",
+       "        [ 8.0281861e-02,  8.0281861e-02,  8.0281861e-02, ...,\n",
+       "          5.4750210e-01,  5.4750210e-01,  5.4750210e-01]], dtype=float32),\n",
+       " 'bed']"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,12 +129,15 @@
     "class final_model_SKL:\n",
     "    def __init__(self, name, test, batch_size=32):\n",
     "\n",
-    "        try:\n",
-    "            model_known = tf.keras.models.load_model(f'models\\\\final\\\\TEST_{name}_known.h5')\n",
-    "            model_label = tf.keras.models.load_model(f'models\\\\final\\\\TEST_{name}_labels_only.h5')\n",
-    "        except:\n",
-    "            model_known = tf.keras.models.load_model(f'models\\\\final\\\\TEST_{name}_known.h5',custom_objects={\"TransformerBlock\": TransformerBlock})\n",
-    "            model_label = tf.keras.models.load_model(f'models\\\\final\\\\TEST_{name}_labels_only.h5',custom_objects={\"TransformerBlock\": TransformerBlock})\n",
+    "        # try:\n",
+    "        #     model_known = tf.keras.models.load_model(f'models\\\\final\\\\TEST_{name}_known.h5')\n",
+    "        #     model_label = tf.keras.models.load_model(f'models\\\\final\\\\TEST_{name}_labels_only.h5')\n",
+    "        # except:\n",
+    "        #     model_known = tf.keras.models.load_model(f'models\\\\final\\\\FINAL_{name}_known.h5',custom_objects={\"TransformerBlock\": TransformerBlock})\n",
+    "        #     model_label = tf.keras.models.load_model(f'models\\\\final\\\\FINAL_{name}_labels_only.h5',custom_objects={\"TransformerBlock\": TransformerBlock})\n",
+    "\n",
+    "        model_known = tf.keras.models.load_model('models/best_gru_known_vs_unknown.h5')\n",
+    "        model_label = tf.keras.models.load_model('models/best_gru_label_detection.h5')\n",
     "            \n",
     "        self.model_known = model_known\n",
     "        self.model_label = model_label\n",
@@ -86,6 +152,11 @@
     "        self.predicted_labels = None\n",
     "        self.silence_labels = None\n",
     "\n",
+    "        self.predict_if_known()\n",
+    "        self.predict_label()\n",
+    "        self.predict_silence()\n",
+    "        self.save_results()\n",
+    "\n",
     "    def predict_silence(self):\n",
     "        self.silence_labels = pd.read_pickle('silence_detected.pkl')\n",
     "    \n",
@@ -97,21 +168,60 @@
     "\n",
     "    def save_results(self):\n",
     "        df = pd.read_csv('sample_submission.csv')\n",
-    "        x = pd.concat([pd.DataFrame(np.argmax(d.predicted_labels, axis=1)),pd.DataFrame(d.silence_labels), pd.DataFrame(np.argmax(d.predicted_labels_known, axis=1))], axis=1)\n",
+    "        x = pd.concat([pd.DataFrame(np.argmax(self.predicted_labels, axis=1)),pd.DataFrame(self.silence_labels), pd.DataFrame(np.argmax(self.predicted_labels_known, axis=1))], axis=1)\n",
     "        x.columns = ['label', 'silence','unknown']\n",
     "        # unknown == 1 => unknown\n",
-    "        res = np.where(x['silence'] == 0 , 'silence', np.where((x['unknown'] == 1) , 'unknown', [d.LABELS_dict[i] for i in x['label']]))\n",
+    "        res = np.where(x['silence'] == 0 , 'silence', np.where((x['unknown'] == 1) , 'unknown', [self.LABELS_dict[i] for i in x['label']]))\n",
     "        df['label'] = res\n",
     "        df.to_csv(f'results/FINAL_submission_SKL_{self.name}.csv', index=False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4955/4955 [==============================] - 137s 27ms/step\n",
+      "4955/4955 [==============================] - 67s 13ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "d = final_model_SKL('gru', test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6    25662\n",
+       "5    22376\n",
+       "4    20986\n",
+       "9    16418\n",
+       "1    15329\n",
+       "0    15095\n",
+       "7    14354\n",
+       "3    11969\n",
+       "2     8242\n",
+       "8     8107\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(np.argmax(d.predicted_labels,axis=1)).value_counts()"
    ]
   },
   {
@@ -135,37 +245,118 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.save_results()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('sample_submission.csv')\n",
-    "x = pd.concat([pd.DataFrame(np.argmax(d.predicted_labels, axis=1)),pd.DataFrame(d.silence_labels), pd.DataFrame(np.argmax(d.predicted_labels_known, axis=1))], axis=1)\n",
-    "x.columns = ['label', 'silence','unknown']\n",
-    "# unknown == 1 => unknown\n",
-    "res = np.where(x['silence'] == 0 , 'silence', np.where((x['unknown'] == 1) , 'unknown', [d.LABELS_dict[i] for i in x['label']]))\n",
-    "df['label'] = res\n",
-    "name = 'transformer'\n",
-    "df.to_csv(f'results/FINAL_submission_SKL_{name}.csv', index=False, header=True)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# SILENCE - labels/unknown HIPERPARAMS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import models\n",
+    "from models import Lstm, Gru, Transformer, TransformerBlock\n",
+    "from dataset import LABELS\n",
+    "import pandas as pd\n",
+    "\n",
+    "class final_model_SL:\n",
+    "    def __init__(self, name, test, batch_size=32, path = None):\n",
+    "\n",
+    "        if path is None:\n",
+    "            try:\n",
+    "                model_label = tf.keras.models.load_model(f'models\\\\final\\\\FINAL_{name}_simple_predict.h5')\n",
+    "            except:\n",
+    "                model_label = tf.keras.models.load_model(f'models\\\\final\\\\FINAL_{name}_simple_predict.h5',custom_objects={\"TransformerBlock\": TransformerBlock})\n",
+    "        else:\n",
+    "            try:\n",
+    "                model_label = tf.keras.models.load_model(path)\n",
+    "            except:\n",
+    "                model_label = tf.keras.models.load_model(path,custom_objects={\"TransformerBlock\": TransformerBlock})\n",
+    "\n",
+    "        self.model_label = model_label\n",
+    "        self.test = test\n",
+    "        self.batch_size = batch_size\n",
+    "        self.name = name\n",
+    "\n",
+    "        LABELS_dict = {i:LABELS[i] for i in range(len(LABELS))}\n",
+    "        LABELS_dict[10] = 'unknown'\n",
+    "        self.LABELS_dict = LABELS_dict\n",
+    "\n",
+    "        self.predicted_labels = None\n",
+    "        self.silence_labels = None\n",
+    "        self.predict_silence()\n",
+    "        self.predict_label()\n",
+    "        self.save_results()\n",
+    "\n",
+    "    def predict_silence(self):\n",
+    "        self.silence_labels = pd.read_pickle('silence_detected.pkl')\n",
+    "    \n",
+    "    def predict_label(self):\n",
+    "        self.predicted_labels = self.model_label.predict(self.test.batch(self.batch_size))\n",
+    "\n",
+    "    def save_results(self):\n",
+    "        df = pd.read_csv('sample_submission.csv')\n",
+    "        x = pd.concat([pd.DataFrame(np.argmax(self.predicted_labels, axis=1)),pd.DataFrame(self.silence_labels)], axis=1)\n",
+    "        x.columns = ['label', 'silence']\n",
+    "        res = np.where(x['silence'] == 0 , 'silence', [self.LABELS_dict[i] for i in x['label']])\n",
+    "        df['label'] = res\n",
+    "        df.to_csv(f'results/FINAL_submission_SL_{self.name}.csv', index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4955/4955 [==============================] - 44s 9ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = final_model_SL('gru', test, path = 'models/best_gru_label_vs_unknown.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4955/4955 [==============================] - 77s 15ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = final_model_SL('gru', test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.keras.models.load_model(f'models\\\\final\\\\FINAL_{name}_simple_predict.h5',custom_objects={\"TransformerBlock\": TransformerBlock})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
